syntax = "proto3";

package ibanking.users;

service UsersService {
  rpc findById(FindByIdRequest) returns (User);
  rpc findByUsername(FindByUsernameRequest) returns (User);
  rpc create(CreateUserRequest) returns (User);
}

message FindByIdRequest {
  string id = 1;
}

message FindByUsernameRequest {
  string username = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string createdAt = 4;
  string updatedAt = 5;
}